kubernetes/apps/cloudnative-pg/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cloudnative-pg
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudnative-pg
  namespace: cloudnative-pg
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudnative-pg-cloudnative-pg
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/component: database
              app.kubernetes.io/managed-by: cloudnative-pg
              app.kubernetes.io/name: postgresql
              cnpg.io/podRole: instance
      ports:
        - port: 8000
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: barman-cloud
      ports:
        - port: 9090
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg
  namespace: cloudnative-pg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cloudnative-pg-cloudnative-pg
      app.kubernetes.io/name: cloudnative-pg
  egress:
    - toEntities:
        - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
        - host
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plugin-barman-cloud
  namespace: cloudnative-pg
spec:
  podSelector:
    matchLabels:
      app: barman-cloud
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: cloudnative-pg-cloudnative-pg
              app.kubernetes.io/name: cloudnative-pg
      ports:
        - port: 9090
          protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plugin-barman-cloud
  namespace: cloudnative-pg
spec:
  endpointSelector:
    matchLabels:
      app: barman-cloud
  egress:
    - toEntities:
        - kube-apiserver
